@@ -1,2 +1,5 @@
+2010-05-06
+    * Remove connection timeout from re-used keepalive connection.
+
 2010-05-05    VERSION 0.1
     * Initial release
